[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = keystone
description = KEYSTONE analysis software
long_description = Reduction and mapping software for the KEYSTONE project
author = Erik Rosolowsky
author_email = rosolowsky@ualberta.ca
license = GPLv2
url = http://astropy.org/
edit_on_github = True
github_project = GBTAmmoniaSurvey/keystone
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev

[entry_points]
astropy-package-template-example = packagename.example_mod:main
